fix: centers page ui to improve whitespace usage

--- a/styles/graphs.css
+++ b/styles/graphs.css
@@ -7,12 +7,13 @@
   margin-right: 4.5rem;
 }
 article {
-  border-left: 14px solid rgba(0,0,0,0.4);
-  padding-left: 2rem;
-  padding-top: 2px;
+  /* border-left: 14px solid rgba(0,0,0,0.4); */
+  /* padding-left: 1.75rem; */
+  /* padding-top: 2px; */
   padding-bottom: 2rem;
-  width: 70%;
-  background-color: rgba(0,0,0,0.1);
+  margin: 1rem 0;  
+  /* background-color: rgba(0,0,0,0.1); */
+  text-align: center;
 }
 .plot {
   padding: 0 0.75rem 0;
