--- a/styles/page.css
+++ b/styles/page.css
@@ -17,8 +17,14 @@ h2 {
 body {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0 2rem;
   background-color: rgba(0,0,0,0.0);
+}
+
+header {
+  text-align: center;
 }
 
 .divider {
@@ -34,6 +40,7 @@ span ~ h3 {
 section {
   padding-bottom: 30px;
 }
+
 .section-header { 
   font-size: 24px;
   font-weight: 500;
